# CS4031-Graphics-DSL-Compiler-Targeting-x86-Assembly

./: Cargo.toml  README.md
asm_output/: ball.asm  bounce.asm  checkerboard.asm  demo.asm  diagonal.asm  grow.asm  timer.asm
examples/: ball.pixel  bounce.pixel  checkerboard.pixel  demo.pixel  diagonal.pixel  grow.pixel  timer.pixel
src/: ast.rs  main.rs  optimizer.rs
src/codegen/: mod.rs
src/ir/: mod.rs
src/lexer/: mod.rs
src/parser/: mod.rs
src/semantic/: mod.rs
